// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Results component renders correctly 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-1 ColorPair-root-8 ColorPair-alert-16"
      >
        <div
          class="AlertBanner-actions-5"
        />
        <div
          class="Container-root-34"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-6 Typography-root-36 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-7"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-1 ColorPair-root-8 ColorPair-alabaster-17"
      >
        <div
          class="AlertBanner-actions-5"
        />
        <div
          class="Container-root-34"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-6 Typography-root-36 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-7"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form-root-44 form"
    >
      <h4
        class="MuiTypography-root title Typography-root-36 Typography-underline-38 MuiTypography-h4"
        data-testid="typography"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography-root-36 MuiTypography-body1"
            data-testid="typography"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-52 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your name
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-55 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-57"
                >
                  <span>
                    Your name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-52 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your email address
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-55 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-57"
                >
                  <span>
                    Your email address
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-60"
          >
            <div
              class="MuiFormControl-root Checkbox-root-59"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-64"
                      data-indeterminate="false"
                      name="gdpr_1"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-60"
          >
            <div
              class="MuiFormControl-root Checkbox-root-59"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-64"
                      data-indeterminate="false"
                      name="gdpr_2"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-49 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-65 MuiButton-contained Button-contained-67 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-68"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with debugging mode on 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-85 ColorPair-root-92 ColorPair-alert-100"
      >
        <div
          class="AlertBanner-actions-89"
        />
        <div
          class="Container-root-118"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-90 Typography-root-120 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-91"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-85 ColorPair-root-92 ColorPair-alabaster-101"
      >
        <div
          class="AlertBanner-actions-89"
        />
        <div
          class="Container-root-118"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-90 Typography-root-120 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-91"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form-root-128 form"
    >
      <h4
        class="MuiTypography-root title Typography-root-120 Typography-underline-122 MuiTypography-h4"
        data-testid="typography"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography-root-120 MuiTypography-body1"
            data-testid="typography"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-136 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your name
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-139 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-141"
                >
                  <span>
                    Your name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-136 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your email address
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-139 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-141"
                >
                  <span>
                    Your email address
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-144"
          >
            <div
              class="MuiFormControl-root Checkbox-root-143"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-145 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-148"
                      data-indeterminate="false"
                      name="gdpr_1"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-144"
          >
            <div
              class="MuiFormControl-root Checkbox-root-143"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-145 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-148"
                      data-indeterminate="false"
                      name="gdpr_2"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-133 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-149 MuiButton-contained Button-contained-151 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-152"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      class="FieldContainer"
    >
      <h3
        class="MuiTypography-root Typography-root-120 MuiTypography-h3"
        data-testid="typography"
      >
        Measurements (showing because debugging mode is ON)
      </h3>
      <h4
        class="MuiTypography-root Typography-root-120 MuiTypography-h4"
        data-testid="typography"
      >
        Lines
      </h4>
      <ul>
        <li>
          <b>
            ridge
            :
          </b>
           
          1500.00
        </li>
        <li>
          <b>
            eave
            :
          </b>
           
          900.00 | 900.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            leftVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
        <li>
          <b>
            rightVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
      </ul>
      <h4
        class="MuiTypography-root Typography-root-120 MuiTypography-h4"
        data-testid="typography"
      >
        Faces
      </h4>
      <ul>
        <li>
          <b>
            face 
            1
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            face 
            2
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with default ridge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-337 ColorPair-root-344 ColorPair-alert-352"
      >
        <div
          class="AlertBanner-actions-341"
        />
        <div
          class="Container-root-370"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-342 Typography-root-372 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-343"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-337 ColorPair-root-344 ColorPair-alabaster-353"
      >
        <div
          class="AlertBanner-actions-341"
        />
        <div
          class="Container-root-370"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-342 Typography-root-372 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-343"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form-root-380 form"
    >
      <h4
        class="MuiTypography-root title Typography-root-372 Typography-underline-374 MuiTypography-h4"
        data-testid="typography"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography-root-372 MuiTypography-body1"
            data-testid="typography"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-388 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your name
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-391 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-393"
                >
                  <span>
                    Your name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-388 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your email address
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-391 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-393"
                >
                  <span>
                    Your email address
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-396"
          >
            <div
              class="MuiFormControl-root Checkbox-root-395"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-397 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-400"
                      data-indeterminate="false"
                      name="gdpr_1"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-396"
          >
            <div
              class="MuiFormControl-root Checkbox-root-395"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-397 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-400"
                      data-indeterminate="false"
                      name="gdpr_2"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-385 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-401 MuiButton-contained Button-contained-403 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-404"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with main tile as verge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-253 ColorPair-root-260 ColorPair-alert-268"
      >
        <div
          class="AlertBanner-actions-257"
        />
        <div
          class="Container-root-286"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-258 Typography-root-288 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-259"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-253 ColorPair-root-260 ColorPair-alabaster-269"
      >
        <div
          class="AlertBanner-actions-257"
        />
        <div
          class="Container-root-286"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-258 Typography-root-288 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-259"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form-root-296 form"
    >
      <h4
        class="MuiTypography-root title Typography-root-288 Typography-underline-290 MuiTypography-h4"
        data-testid="typography"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography-root-288 MuiTypography-body1"
            data-testid="typography"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-304 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your name
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-307 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-309"
                >
                  <span>
                    Your name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-304 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your email address
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-307 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-309"
                >
                  <span>
                    Your email address
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-312"
          >
            <div
              class="MuiFormControl-root Checkbox-root-311"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-313 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-316"
                      data-indeterminate="false"
                      name="gdpr_1"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-312"
          >
            <div
              class="MuiFormControl-root Checkbox-root-311"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-313 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-316"
                      data-indeterminate="false"
                      name="gdpr_2"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-301 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-317 MuiButton-contained Button-contained-319 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-320"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with no guttering 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-169 ColorPair-root-176 ColorPair-alert-184"
      >
        <div
          class="AlertBanner-actions-173"
        />
        <div
          class="Container-root-202"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-174 Typography-root-204 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-175"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-169 ColorPair-root-176 ColorPair-alabaster-185"
      >
        <div
          class="AlertBanner-actions-173"
        />
        <div
          class="Container-root-202"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-174 Typography-root-204 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-175"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form-root-212 form"
    >
      <h4
        class="MuiTypography-root title Typography-root-204 Typography-underline-206 MuiTypography-h4"
        data-testid="typography"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography-root-204 MuiTypography-body1"
            data-testid="typography"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-220 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your name
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-223 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-225"
                >
                  <span>
                    Your name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField-root-220 MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Your email address
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-223 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-225"
                >
                  <span>
                    Your email address
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-228"
          >
            <div
              class="MuiFormControl-root Checkbox-root-227"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-229 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-232"
                      data-indeterminate="false"
                      name="gdpr_1"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="Checkbox-asterisksDecorator-228"
          >
            <div
              class="MuiFormControl-root Checkbox-root-227"
            >
              <label
                class="MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-229 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-232"
                      data-indeterminate="false"
                      name="gdpr_2"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                >
                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-217 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-233 MuiButton-contained Button-contained-235 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-236"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component sends email address and downloads PDF ignoring unavailable images: Email address details 1`] = `
Array [
  Array [
    Object {
      "email": "test@test.test",
      "gdpr_1": true,
      "gdpr_2": true,
      "name": "Test Test",
    },
  ],
]
`;

exports[`PitchedRoofCalculator Results component sends email address and downloads PDF ignoring unavailable images: PDF props 1`] = `
Array [
  Array [
    Object {
      "area": "151.51",
      "getMicroCopy": [Function],
      "results": Object {
        "accessories": Array [],
        "fixings": Array [],
        "sealing": Array [],
        "tiles": Array [],
        "ventilation": Array [],
      },
    },
  ],
]
`;
